# os-mycat

./: CMakeLists.txt  README.md
cmake/: input1.txt  input2.txt
inc/operations/: file_io.hpp
src/: file_io.cpp  main.cpp
